--- a/task_table_tw_clone/index.html
+++ b/task_table_tw_clone/index.html
@@ -32,7 +32,8 @@
         </table>
         <script>
             const tbl = new TaskTable(
-                document.getElementById("task-list")
+                document.getElementById("task-list"),
+                (d) => {console.log(d)}
             ).set_data(test_data);
         </script>
     </body>
