--- a/task_table_tw_clone/index.html
+++ b/task_table_tw_clone/index.html
@@ -26,7 +26,7 @@
                     <i class="ri-arrow-down-s-line __bind_move_down" title="Move item down"></i>
                     <i class="ri-add-large-fill __bind_add_row" title="Create a new item below"></i>
                     <i class="ri-play-list-add-line __bind_child_row" title="Create a new item as a child of this item"></i>
-                    <i class="ri-delete-bin-5-line __bind_delte" title="Delete this item"></i>
+                    <i class="ri-delete-bin-5-line __bind_delete" title="Delete this item"></i>
                 </div>
             </template>
         </table>
