--- a/task_table_tw_clone/index.html
+++ b/task_table_tw_clone/index.html
@@ -4,7 +4,6 @@
         <link rel="stylesheet" href="css/styles.css" />
         <link rel="stylesheet" href="css/tasks_table.css" />
         <link rel="stylesheet" href="css/fonts/remixicon.css" />
-        <script src="js/tasks_table.js"></script>
         <script src="js/test_data.js"></script>
     </head>
     <body>
@@ -30,7 +29,8 @@
                 </div>
             </template>
         </table>
-        <script>
+        <script type="module">
+            import {TaskTable} from './js/tasks_table.js';
             const tbl = new TaskTable(
                 document.getElementById("task-list"),
                 (d) => {console.log(d)}
