--- a/task_table_tw_clone/index.html
+++ b/task_table_tw_clone/index.html
@@ -20,12 +20,12 @@
             <tbody></tbody>
             <template>
                 <div class="task-list__row-controls-container">
-                    <i class="ri-pencil-line __bind_edit" title="Edit this item"></i>
-                    <i class="ri-arrow-up-s-line __bind_move_up" title="Move item up"></i>
-                    <i class="ri-arrow-down-s-line __bind_move_down" title="Move item down"></i>
-                    <i class="ri-add-large-fill __bind_add_row" title="Create a new item below"></i>
-                    <i class="ri-play-list-add-line __bind_child_row" title="Create a new item as a child of this item"></i>
-                    <i class="ri-delete-bin-5-line __bind_delete" title="Delete this item"></i>
+                    <button class="__bind_edit"><i class="ri-pencil-line" title="Edit this item"></i></button>
+                    <button class="__bind_move_up"><i class="ri-arrow-up-s-line" title="Move item up"></i></button>
+                    <button class="__bind_move_down"><i class="ri-arrow-down-s-line" title="Move item down"></i></button>
+                    <button class="__bind_add_row"><i class="ri-add-large-fill" title="Create a new item below"></i></button>
+                    <button class="__bind_child_row"><i class="ri-play-list-add-line" title="Create a new item as a child of this item"></i></button>
+                    <button class="__bind_delete"><i class="ri-delete-bin-5-line" title="Delete this item"></i></button>
                 </div>
             </template>
         </table>
